# neopixel-webusb

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
.github/workflows/: build.yml
dashboard/: README.md  package-lock.json  package.json
dashboard/src/: app.html  service-worker.js
dashboard/src/routes/: +page.svelte
src/: main.rs  neopixel.rs
