[package]
name = "neopixel-webusb"
version = "0.1.0"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
repository = "https://github.com/dotcypress/neopixel-webusb"
description = "WebUSB NeoPixel Controller"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
cortex-m-rtic = "1.1.3"
panic-halt = "0.2.0"
rp2040-hal = { version = "0.9.1", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.2"
pio = "0.2.1"
cortex-m = "0.7.7"
embedded-hal = "0.2.7"
ws2812-pio = "0.7.0"
smart-leds = "0.3.0"
fugit = "0.3.7"
usb-device = "0.2"
usbd-webusb = "1.0.2"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 2
debug = 1
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
